--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+html {
+    font-family: arial, sans-serif; 
+}
 header {
     position: relative;
     background-color: #29a6dc;
@@ -111,6 +115,26 @@ header img {
     header img {
         right: -22%;
         height: 95%;
+    }
+}
+@media (orientation: landscape) and (min-width: 1280px) {
+    header div.welcome {
+        text-align: left;
+    }
+    header p {
+        font-size: 100px;
+    }
+    header h1 {
+        font-size: 40px;
+        margin-top: 50px; 
+    }
+    header h2 {
+        font-size: 45px;
+    }
+
+    header img {
+        right: -18%;
+        height: 85%;
     }
 }
 section {
