--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,57 @@ header img {
         height: 85%;
     }
 }
-section {
-    min-height: 100vh;
+
+.features {
+    /* margin-top: 5%; */
+    padding: 5%;
+    text-align: center;
+}
+.feature h1{
+font-family: 'Saira Condensed', sans-serif; 
+
+font-size: 24px;
+text-transform: uppercase;
+}
+.feature h2{
+    font-family: 'Saira Condensed', sans-serif; 
+    
+}
+.feature p {
+    padding-top: 10px;
+    font-family: 'Saira', sans-serif; 
+    text-align: initial;
+}
+.img_test {
+width: 100%;
+height: 100px;
+background-color: blue;
+margin-left: auto;
+margin-right: auto;
+}
+
+@media (min-width: 1024px) {
+    .feature {
+        float: left;
+        width: 33%;
+    }
+    .features h1{
+        font-size: 36px;
+        
+        
+    }
+    .features h2 {
+        font-size: 28px;
+       
+    }
+    .features p{
+        font-size: 19px;
+        padding: 0 10px;
+        margin-top: 10px;
+        
+    }
+    .img_test {
+        padding: 5px;
+        width: 80%;
+    }
 }
