--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+.clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
 html {
     font-family: arial, sans-serif; 
 }
