--- a/css/style.css
+++ b/css/style.css
@@ -164,13 +164,13 @@ text-transform: uppercase;
     font-family: 'Saira', sans-serif; 
     text-align: initial;
 }
-.img_test {
+/* .img_test {
 width: 100%;
 height: 100px;
 background-color: blue;
 margin-left: auto;
 margin-right: auto;
-}
+} */
 
 @media (min-width: 1024px) {
     .feature {
@@ -192,36 +192,65 @@ margin-right: auto;
         margin-top: 10px;
         
     }
-    .img_test {
-        padding: 5px;
-        width: 80%;
-    }
+    
 }
 
 
 /* section motto */
-.slogan .bg {
+
+.slogan {
+    text-align: center;
+    background-image: url("../images/photo2.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    color: white;
+    
+}
+.slogan h1 {
+    font-family: 'Saira Condensed', sans-serif;
+    font-size: 26px;
+    text-transform: uppercase;
+    margin-bottom: 25px;
+}
+.slogan p {
+    font-family: 'Saira', sans-serif;
+    font-size: 18px;
+    text-align: center;
+  }
+  .slogan .bg {
+    padding: 30px 10px;
+    background-color: rgba(0, 63, 114, 0.5);
+    /*  #003f72*/
+  }
+  
+  @media (min-width: 1024px) {
+
+    .slogan .bg {
+      padding: 80px 10px;
+  
+    }
+  
+    .slogan h1 {
+      font-size: 60px;
+      margin-bottom: 55px;
+  
+    }
+  
+    .slogan p {
+      font-size: 40px;
+      width: 50%;
+    }
+  
+    
+  }
+  
+.lol {
+    height: 400px;
+    width: 100%;
     background-color: black;
 }
-.slogan {
-    position: relative;
-background-image: url("../images/photo2.jpg");
-background-image: transparent;
-width: 100%;
-height: 900px;
-}
-.slogan h1{
-position: absolute;
-font-size: 24px;
-text-transform: uppercase;
-top: 40%;
-left:45%;
-color: white;
-font-family: 'Saira Condensed', sans-serif; 
-
-}
-
-.slogan h2 {
+/* .slogan h2 {
     position: absolute;
     font-size: 34px;
     text-transform: uppercase;
@@ -230,7 +259,5 @@ font-family: 'Saira Condensed', sans-serif;
     color: white;
     font-family: 'Saira Condensed', sans-serif; 
 
-}
-.lol {
-    background-color: blueviolet;
-}
+} */
+
