--- a/css/style.css
+++ b/css/style.css
@@ -143,56 +143,90 @@ header img {
         height: 85%;
     }
 }
+/* section feature */
 
 .features {
-    /* margin-top: 5%; */
+    max-width: 1600px;
+    margin: 50px auto 0;
+    margin-top: 10px;
     padding: 5%;
     text-align: center;
 }
-.feature h1{
-font-family: 'Saira Condensed', sans-serif; 
-
-font-size: 24px;
-text-transform: uppercase;
+.features h1 {
+    font-family: 'Saira Condensed' sans-serif; 
+    font-size: 24px;
+    text-transform: uppercase;
+    margin-bottom: 15px;
 }
-.feature h2{
-    font-family: 'Saira Condensed', sans-serif; 
+.features h2 {
+    font-family: 'Saira Condensed' sans-serif;
+    padding: 10px;
+}
+.features img {
+    width: 100%;
+    margin: 20px 0;
+    max-width: 300px;
+}
+.features p {
+    font-family: 'Saira' sans-serif; 
+    font-size: 16px;
+    font-weight: 300;
     
 }
-.feature p {
-    padding-top: 10px;
-    font-family: 'Saira', sans-serif; 
-    text-align: initial;
-}
-/* .img_test {
-width: 100%;
-height: 100px;
-background-color: blue;
-margin-left: auto;
-margin-right: auto;
-} */
 
+@media (min-width: 360px) {
+    .feature h1 {
+        font-size: 28px;
+    }
+    .feature h2 {
+        font-size: 24px;
+    }
+
+}
+@media (min-width: 768px) {
+    .feature h1 {
+        font-size: 34px;
+    }
+    .feature h2 {
+        font-size: 24px;
+    }
+    .feature p {
+        font-size: 18px;
+    }
+}
 @media (min-width: 1024px) {
     .feature {
         float: left;
         width: 33%;
+        padding: 30px;
     }
     .features h1{
         font-size: 36px;
-        
-        
     }
     .features h2 {
-        font-size: 28px;
-       
+        font-size: 22px;
     }
     .features p{
-        font-size: 19px;
+        font-size: 21px;
         padding: 0 10px;
         margin-top: 10px;
-        
     }
     
+}
+@media (min-width: 1600px) {
+    .feature {
+        padding:  20px 40px;
+    }
+    .features h1 {
+        font-size: 55px;
+    }
+    .feature h2 {
+        font-size: 36px;
+    }
+    .feature p {
+        font-size: 21px;
+        padding: 0 10px;
+    }
 }
 
 
