--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@
 html {
     font-family: arial, sans-serif; 
 }
+
+/* section header */
 header {
     position: relative;
     background-color: #29a6dc;
@@ -295,7 +297,41 @@ header img {
       width: 60%;
     }
 }
-  
+
+.hobby .item {
+    height: 30vh;
+    background-position: center;
+}
+ .hobby .item:nth-of-type(1) {
+    background-image: url(../images/isolate-1209275_1920.jpg);
+    
+}
+ .hobby .item:nth-of-type(2) {
+    background-image: url(../images/hobby2.jpg);
+ }
+.hobby .item:nth-of-type(3) {
+    background-image: url(../images/hobby3.jpg);
+    
+}
+.hobby .item:nth-of-type(4) {
+    background-image: url(../images/hobby4.jpg);
+    
+}
+.hobby .item p {
+    font-family: 'saira', sans-serif;
+    color: white;
+    text-align: center;
+    /* line-height: 25vh; */
+    text-shadow: 0 0 4px black;
+    background-color: rgba(0, 0, 0, 0.5);
+    font-size: 20px;
+}
+.hobby h1 {
+    font-family: 'saira condensed', sans-serif;
+    padding: 20px;
+    text-align: center;
+    font-size: 36px;
+}
 /* .lol {
     height: 400px;
     width: 100%;
