--- a/css/style.css
+++ b/css/style.css
@@ -298,8 +298,13 @@ header img {
     }
 }
 
+/* section hobby */
 .hobby .item {
     height: 30vh;
+    background-position: center;
+}
+.hobby .item {
+    background-repeat: no-repeat;
     background-position: center;
 }
  .hobby .item:nth-of-type(1) {
@@ -331,6 +336,14 @@ header img {
     padding: 20px;
     text-align: center;
     font-size: 36px;
+}
+
+@media (min-width: 533px) {
+    .hobby .item {
+        float: left;
+        width: 50%;
+        height: 40vh;
+    }
 }
 /* .lol {
     height: 400px;
