--- a/css/style.css
+++ b/css/style.css
@@ -336,6 +336,7 @@ header img {
     padding: 20px;
     text-align: center;
     font-size: 36px;
+    text-transform: uppercase;
 }
 
 @media (min-width: 533px) {
@@ -343,6 +344,16 @@ header img {
         float: left;
         width: 50%;
         height: 40vh;
+    }
+}
+@media (min-width: 768px) {
+    .hobby h1 {
+        margin-top: 40px;
+        font-size: 48px;
+        margin-bottom: 35px;
+    }
+    .hobby .item p {
+        font-size: 30px;
     }
 }
 /* .lol {
