--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,27 @@ header img {
             margin-left: 40px;
           }
 }
+@media (min-width:768px) {
 
+    .portfolio h1 {
+      font-size: 40px;
+    }
+  
+    .portfolio .about h2 {
+      font-size: 28px;
+      text-indent: 40px;
+    }
+  
+    .portfolio .about p {
+      font-size: 18px;
+      padding-left: 40px;
+    }
+  
+    .portfolio .project {
+      margin-bottom: 40px;
+    }
+  
+  }
 
 
 /* section slogan */
