--- a/css/style.css
+++ b/css/style.css
@@ -264,6 +264,7 @@ header img {
     border-bottom: 2px solid white;
     margin-bottom: 12px;
     padding-bottom: 6px;
+    text-indent: 20px;
 }
 
 .portfolio .about p {
@@ -325,7 +326,29 @@ header img {
     }
   
   }
-
+  @media (orientation: landscape) and (min-width: 1400px) {
+    .portfolio h1 {
+      font-size: 60px;
+      padding: 30px 0;
+    }
+  
+    .portfolio .about h2 {
+      padding-top: 50px;
+      font-size: 28px;
+      text-indent: 40px;
+      margin-bottom: 50px;
+    }
+  
+    .portfolio .about p {
+      font-size: 18px;
+      padding-left: 40px;
+      line-height: 180%;
+    }
+  
+    .portfolio .project {
+      margin-bottom: 40px;
+    }
+  }
 
 /* section slogan */
 
