--- a/css/style.css
+++ b/css/style.css
@@ -348,7 +348,37 @@ header img {
     .portfolio .project {
       margin-bottom: 40px;
     }
-  }
+}
+
+/* section education */
+.education img{
+    max-width: 80px;
+    max-height: 70px;
+    padding: 5px;
+    background-color: #29a6dc;
+    margin-left: 5px;
+
+}
+.education h2 {
+    float: right;
+    width: 70%;
+    font-family: 'Saira Condensed', sans-serif;
+    font-size: 25px;
+    padding-top: 10px;
+    margin: 5px;
+}
+
+
+.education p {
+   
+    padding: 10px;
+}
+.ed h1 {
+    text-align: center;
+    padding: 10px;
+    text-transform: uppercase;
+    font-size: 25px;
+}
 
 /* section slogan */
 
