--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@ header img {
     color: white;
     font-family: 'Saira', sans-serif;
     font-weight: normal;
-    padding: 10px 20px 20px 20px;
+    padding: 2px 10px 10px 10px;
     text-align: left;
     
 }
@@ -263,13 +263,13 @@ header img {
     font-size: 18px;
     border-bottom: 2px solid white;
     margin-bottom: 12px;
-    padding-bottom: 6px;
+    padding-bottom: 10px;
     text-indent: 20px;
 }
 
 .portfolio .about p {
     font-size: 12px;
-    padding-left: 20px;
+    /* padding-left: 20px; */
 }
 
 .portfolio .project {
@@ -572,7 +572,10 @@ footer {
 }
 }
 
-
+.about h2 button {
+    float: left;
+    width: 50%
+}
 
 /* .lol {
     height: 400px;
