--- a/css/style.css
+++ b/css/style.css
@@ -493,7 +493,7 @@ header img {
     }
   
     .portfolio .project {
-      margin-bottom: 40px;
+      margin-bottom: 30px;
     }
 }
 
@@ -502,95 +502,131 @@ header img {
 .ed {
     max-width: 1600px;
     margin: 50px auto 0;
+    /* margin: 50px auto 0; */
+    padding: 5%;
+    text-align: center;
 }
-.education img{
-    max-width: 80px;
-    max-height: 70px;
-    padding: 2px;
-    background-color: #29a6dc;
-    margin-left: 5px;
+.ed img{
+    width: 100%;
+    margin: 5px 0;
+    max-width: 175px;
+    border: solid 2px #29a6dc;
+}
+.ed h1 {
+    text-transform: uppercase;
+    font-size: 22px;
+    margin-bottom: 15px;
     
 }
 
-.education h2 {
-    float: right;
-    width: 70%;
-    font-family: 'Saira Condensed', sans-serif;
-    font-size: 25px;
-    padding-top: 10px;
-    margin: 5px;
-    text-align: left;
+.ed h2 {
+    font-family: 'Saira Condensed',
+    sans-serif;
+    font-size: 22px;
+    text-transform: uppercase;
+    padding: 7px;
+    text-align: center;
 }
 .education h3 {
     font-size: 16px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 5px;
+    padding: 7px;
     text-align: left;
 }
-.education h4 {
-    font-size: 12px;
-    padding-left: 10px;
+
+.ed p {
+    text-align: left;
+    font-weight: 300;
+    font-size: 14px;
+    margin-bottom: 10px;
+    font-family: 'Saira Condensed', sans-serif;
+    padding-left: 7px;
+    padding-right: 7px;
+    padding-bottom: 7px;
 }
 
-.education p {
-   font-size: 14px;
-    padding: 10px;
-    font-family: 'Saira Condensed', sans-serif;
-}
-.ed h1 {
-    text-align: center;
-    padding: 20px;
-    text-transform: uppercase;
-    font-size: 20px;
-}
-@media (orientation: landscape) {
-    .education h2 {
-        width: 80%;
-    }
-    .education img {
-        margin-left: 10px;
-    }
-    
-}
-@media (min-width: 1024px) {
-    .education {
-        float: left;
-        width: 33%;
-        padding: 20px;
-    }
-    .education h2 {
-        width: 65%;
-        font-size: 35px;
-        padding-top: 20px;
-    }
-    .education img{
-        max-width: 130px;
-        max-height: 90px;
-        
-        
-        
-    }
-    
+
+
+ @media (min-width: 360px) {
     .ed h1 {
-        font-size: 50px;
-        padding: 55px;
-        margin-bottom: 10px;
+        font-size: 26px;
     }
-    .education h3 {
-        padding-top: 20px;
-        padding-bottom: 20px;
-        font-size: 25px;
+    .ed h2 {
+        font-size: 24px;
     }
-    .education p{
-        font-size: 20px;
-        /* padding-top: 25px; */
-    }
-    .education h4 {
-        font-size: 16px;
+    .ed p {
+        font-size: 14px;
     }
     
 }
+
+@media (min-width:768px) {
+    .ed h1 {
+      font-size: 36px;
+    }
+  
+    .ed h2 {
+      font-size: 28px;
+    }
+    .ed p {
+      font-size: 18px;
+    }
+  }
+
+  @media (min-width:1024px) {
+    .ed {
+      margin-top: 50px;
+      padding: 5% 2%;
+      text-align: center;
+  
+    }
+    .education {
+      float: left;
+      width: 33%;
+      padding-bottom: 25px;
+      padding-top: 25px;
+    }
+    .ed h1 {
+      font-size: 50px;
+      
+    }
+  
+    .ed h2 {
+      font-size: 30px;
+    }
+    .ed h3 {
+        font-size: 24px;
+        padding-bottom: 30px;
+        padding-top: 30px;
+      }
+    .ed p {
+      font-size: 22px;
+      line-height: 120%;
+      padding: 0 10px;
+    }
+  }
+  @media (min-width:1600px) {
+
+
+    .education {
+  
+      padding: 20px 50px;
+    }
+    .ed h1 {
+      font-size: 60px;
+    }
+  
+    .ed h2 {
+      font-size: 32px;
+    }
+    .ed p {
+      font-size: 21px;
+      line-height: 140%;
+      padding: 0 10px;
+    }
+  }
+    
+    
+
 
 
 /* section slogan */
@@ -688,7 +724,6 @@ header img {
     font-family: 'saira', sans-serif;
     color: white;
     text-align: center;
-    /* line-height: 25vh; */
     text-shadow: 0 0 4px black;
     background-color: rgba(0, 0, 0, 0.5);
     font-size: 18px;
@@ -737,9 +772,7 @@ header img {
         background-size: 130%;
     }
 }
-/* @media (min-width: 1600px) {
 
- }? */
 
 /* section contact */
 .contact {
@@ -800,10 +833,5 @@ footer {
 }
 
 
-/* .lol {
-    height: 400px;
-    width: 100%;
-    background-color: black;
-}
- */
+
 
