--- a/css/style.css
+++ b/css/style.css
@@ -361,6 +361,7 @@ header img {
     margin-bottom: 12px;
     padding-bottom: 10px;
     text-indent: 20px;
+    text-align: center;
 }
 
 .portfolio .about p {
